# fastapi

./: README.md  pyproject.toml
fast_api/: app.py
flask_api/: app.py
