[tool.poetry]
name = "FastApi"
version = "0.1.0"
description = "Créer une fastapi"
authors = ["salma benmoussa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
